--- a/oco-ui/src/react-table.css
+++ b/oco-ui/src/react-table.css
@@ -84,11 +84,11 @@
 }
 .ReactTable .rt-thead .rt-th.-sort-asc,
 .ReactTable .rt-thead .rt-td.-sort-asc {
-  box-shadow: inset 0 3px 0 0 rgba(0, 0, 0, 0.6);
+  box-shadow: inset 0 3px 0 0 #3BB3E4;
 }
 .ReactTable .rt-thead .rt-th.-sort-desc,
 .ReactTable .rt-thead .rt-td.-sort-desc {
-  box-shadow: inset 0 -3px 0 0 rgba(0, 0, 0, 0.6);
+  box-shadow: inset 0 -3px 0 0 #3BB3E4;
 }
 .ReactTable .rt-thead .rt-th.-cursor-pointer,
 .ReactTable .rt-thead .rt-td.-cursor-pointer {
