Skinned all the semantic bits to fit with the wider application theme, and fixed a bunch of small issues in the process.

--- a/orko-ui/src/semantic/src/definitions/collections/message.less
+++ b/orko-ui/src/semantic/src/definitions/collections/message.less
@@ -12,10 +12,10 @@
             Theme
 *******************************/
 
-@type    : 'collection';
+@type : 'collection';
 @element : 'message';
 
-@import (multiple) '../../theme.config';
+@import (multiple) "../../theme.config";
 
 /*******************************
             Message
@@ -23,7 +23,7 @@
 
 .ui.message {
   position: relative;
-  min-height: 1em;
+  dermin-height: 1em;
   margin: @verticalMargin 0em;
   background: @background;
   padding: @padding;
@@ -40,7 +40,6 @@
 .ui.message:last-child {
   margin-bottom: 0em;
 }
-
 
 /*--------------
      Content
@@ -96,7 +95,7 @@
 }
 .ui.message .list:not(.ui) li:before {
   position: absolute;
-  content: '•';
+  content: "•";
   left: -1em;
   height: 100%;
   vertical-align: baseline;
@@ -104,7 +103,6 @@
 .ui.message .list:not(.ui) li:last-child {
   margin-bottom: 0em;
 }
-
 
 /* Icon */
 .ui.message > .icon {
@@ -165,7 +163,6 @@
   display: none;
 }
 
-
 /*******************************
             Variations
 *******************************/
@@ -180,7 +177,6 @@
 .ui.compact.icon.message {
   display: inline-flex;
 }
-
 
 /*--------------
     Attached
@@ -209,7 +205,6 @@
   width: auto;
 }
 
-
 /*--------------
       Icon
 ---------------*/
@@ -234,7 +229,6 @@
   vertical-align: @iconVerticalAlign;
 }
 
-
 .ui.icon.message .icon:not(.close) + .content {
   padding-left: @iconContentDistance;
 }
@@ -249,7 +243,6 @@
 .ui.floating.message {
   box-shadow: @floatingBoxShadow;
 }
-
 
 /*--------------
      Colors
@@ -341,7 +334,6 @@
 .ui.success.message .header {
   color: @successHeaderColor;
 }
-
 
 /* Colors */
 .ui.inverted.message,
