NPM build updates

--- a/orko-ui/src/semantic/src/definitions/collections/message.less
+++ b/orko-ui/src/semantic/src/definitions/collections/message.less
@@ -12,10 +12,10 @@
             Theme
 *******************************/
 
-@type : 'collection';
+@type    : 'collection';
 @element : 'message';
 
-@import (multiple) "../../theme.config";
+@import (multiple) '../../theme.config';
 
 /*******************************
             Message
@@ -23,7 +23,7 @@
 
 .ui.message {
   position: relative;
-  dermin-height: 1em;
+  min-height: 1em;
   margin: @verticalMargin 0em;
   background: @background;
   padding: @padding;
@@ -40,6 +40,7 @@
 .ui.message:last-child {
   margin-bottom: 0em;
 }
+
 
 /*--------------
      Content
@@ -95,7 +96,7 @@
 }
 .ui.message .list:not(.ui) li:before {
   position: absolute;
-  content: "•";
+  content: '•';
   left: -1em;
   height: 100%;
   vertical-align: baseline;
@@ -103,6 +104,7 @@
 .ui.message .list:not(.ui) li:last-child {
   margin-bottom: 0em;
 }
+
 
 /* Icon */
 .ui.message > .icon {
@@ -163,6 +165,7 @@
   display: none;
 }
 
+
 /*******************************
             Variations
 *******************************/
@@ -177,6 +180,7 @@
 .ui.compact.icon.message {
   display: inline-flex;
 }
+
 
 /*--------------
     Attached
@@ -205,6 +209,7 @@
   width: auto;
 }
 
+
 /*--------------
       Icon
 ---------------*/
@@ -229,6 +234,7 @@
   vertical-align: @iconVerticalAlign;
 }
 
+
 .ui.icon.message .icon:not(.close) + .content {
   padding-left: @iconContentDistance;
 }
@@ -243,6 +249,7 @@
 .ui.floating.message {
   box-shadow: @floatingBoxShadow;
 }
+
 
 /*--------------
      Colors
@@ -334,6 +341,7 @@
 .ui.success.message .header {
   color: @successHeaderColor;
 }
+
 
 /* Colors */
 .ui.inverted.message,
